--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Spotify short client</title>
+    <title>Quick training Spotify</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 <body>
 <img id="logo" src="https://upload.wikimedia.org/wikipedia/commons/2/26/Spotify_logo_with_text.svg">
